src/scss/components/_dashboard.scss
#contactsid-app-view {
  padding-bottom: 40px;
  @media (min-width: 768px) {
    padding-bottom: inherit;
  }
  .active-operations,
  .active-countries {
    background: $primary-color-1;
    padding: 20px 40px;
    @include border-radius($border-radius-large);
    .back-link {
      float: right;
    }
    h3 {
      color: $white;
      text-align: center;
      display: inline-block;
    }
    li.list-group-item {
      background: $secondary-color-2;
      border: none;
      border-top: 4px solid $primary-color-1;
      &:hover{
        background: $white;
        a {
          color: #000;
        }
      }
      a{
        text-decoration: none;
        text-transform: uppercase;
      }
    }
  }

  .mobile-checkin {
    padding: 0px 13px 32px;
  }
  .mobile-advancedSearch {
    padding: 2px 30px 10px;
  }
  .service-name{
    width: 60%; 
    float:left;
  }
  .service-width{
    width:80%;
  }

  .service-padding{
    padding-top: 2%;
  }
  
  .service-margin{
    margin-top: -5%;
  }
  
  .alert-margin{
    width: 91.5%;
    float: inherit;
    margin-left: 4%;
    margin-top: -2%;
    margin-bottom: 4%;
  }
  
  .custom-contacts-container {
    .contact-inline-form {
      @media (min-width: $screen-md-min) {
        text-align: right;
        label, input {
          margin-right: 5px;
        }
      }
    }
  }
}

.page-dashboard {
  @media (min-width: 768px) {
    margin-top: 15px;
  }
}

